# llamabot

./: .gitignore  README.md  llamabot.py  main.py  prompts.py  pyproject.toml  settings.py
models/: __init__.py  message.py
persist/: listening.pkl  messages.pkl
